--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 
 		<div class = "send">
-			<textarea rows="10" cols="50" placeholder="Input Here"></textarea>
+			<textarea id="send" rows="10" cols="50" placeholder="Input Here"></textarea>
 			<br>
-			<button>Send</button>
+			<button id="Sender" onclick="SaveData()">Send</button>
 		</div>
 		
 
 
 		<div class = "recieve">
-			<textarea id="Reciever" rows="60" cols="75" disabled="disabled"></textarea>
+			<textarea id="Reciever" rows="50" cols="60" disabled="disabled"></textarea>
 		</div>
 
 
