--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		</div>
 		<div class="client">
 			<div class = "sender">
-				<textarea id="send" rows="10" cols="50" placeholder="Input Here" inputmode="latin" disabled></textarea>
+				<textarea id="send" placeholder="Input Here" inputmode="latin" disabled></textarea>
 				<br>
 				<button id="Sender">Send</button>
 				<button id="User">USER Send</button>
 			</div>
 			
 			<div class = "recieve" id="receivebox">
-				Messages received:
+				<div id="Messages">Messages</div>
 			</div>
 
 			<!--<div class = "recieve">
