prepping for encryption/decryption

--- a/WorkingServerTest/index.html
+++ b/WorkingServerTest/index.html
@@ -19,8 +19,9 @@
 		<textarea class="hold_info" id="sentText" disabled></textarea>
 
 
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="js/lib/adapter.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/core.js" defer></script>
+		<script src="/socket.io/socket.io.js" defer></script>
+		<script src="js/lib/adapter.js" defer></script>
+		<script src="js/main.js" defer></script>
 	</body>
 </html>
