--- a/WorkingServerTest/index.html
+++ b/WorkingServerTest/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Realtime communication with WebRTC</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
 		<link rel="stylesheet" href="/css/main.css"/>
 	</head>
 	<body>
